feat : 6장 MVC 패턴 구현

--- a/6장~12장 실습공간/webapp/include/navigation.jspf
+++ b/6장~12장 실습공간/webapp/include/navigation.jspf
@@ -5,7 +5,7 @@
   <div class="col-md-12">
     <div class="navbar-header">
 
-      <a href="../index.jsp" class="navbar-brand">SLiPP</a>
+      <a href="../home.jsp" class="navbar-brand">SLiPP</a>
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse1">
         <i class="glyphicon glyphicon-search"></i>
       </button>
@@ -45,7 +45,7 @@
     </div>
     <div class="collapse navbar-collapse" id="navbar-collapse2">
       <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="../index.jsp">Posts</a></li>
+        <li class="active"><a href="../home.jsp">Posts</a></li>
         <!--
         <li><a href="#loginModal" role="button" data-toggle="modal">로그인</a></li>
         <li><a href="#registerModal" role="button" data-toggle="modal">회원가입</a></li>
